--- a/src/WristWalk/res/layout/main.xml
+++ b/src/WristWalk/res/layout/main.xml
@@ -13,7 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Bluetooth"
-            android:id="@+id/checkBox" android:layout_gravity="left|center_vertical"/>
+            android:id="@+id/checkBox" android:layout_gravity="left|center_vertical" android:onClick="toggleBluetooth"/>
     <CheckBox
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
